--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -893,15 +893,17 @@
                             </div>
                             <!-- Вкладка EQ Threshold -->
                             <div id="eq-threshold-tab" class="tab-content">
-                                <div style="display: flex; align-items: center; gap: 10px;">
-                                    <label>Порог:
+                                <div>
+                                    <label
+                                        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">Порог:
                                         <select id="eqThresholdSelect">
                                             <option value="0.030" selected>Сомнительный ход (0.030)</option>
                                             <option value="0.060">Плохой ход (0.060)</option>
                                             <option value="0.120">Очень плохой ход (0.120)</option>
                                         </select>
                                     </label>
-                                    <label>Значение:
+                                    <label
+                                        style="display: flex; justify-content: space-between; align-items: center;">Значение:
                                         <input type="number" id="eqThreshold" step="0.001" min="0" value="0.030">
                                     </label>
                                 </div>
