--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -947,7 +947,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="cancel-btn" onclick="closeSettingsModal()">Закрыть</button>
+                    <button class="cancel-btn" onclick="closeSettingsModal()">Подтвердить</button>
                 </div>
             </div>
         </div>
