--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -725,7 +725,7 @@
         }
 
         .select-wrapper {
-            width: 200%;
+            width: 30px;
         }
 
         .select-wrapper select {
@@ -751,7 +751,7 @@
         }
 
         .select-wrapper {
-            width: 200%;
+            width: 30px;
         }
 
         .select-wrapper select {
