--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -658,7 +658,11 @@
 
         .modal-content {
             background-color: #2d2d2d;
-            margin: 10% auto;
+            position: absolute;
+            top: 10%;
+            bottom: 10%;
+            left: 50%;
+            transform: translateX(-50%);
             padding: 20px;
             border: 1px solid #444;
             border-radius: 8px;
@@ -668,7 +672,6 @@
             text-align: left;
             display: flex;
             flex-direction: column;
-            min-height: 400px;
         }
 
         .modal-content h2 {
