--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -726,7 +726,7 @@
         }
 
         .select-wrapper {
-            width: 100%;
+            flex:1;
         }
 
         .select-wrapper select {
@@ -752,7 +752,7 @@
         }
 
         .select-wrapper {
-            width: 100%;
+            flex: 1;
         }
 
         .select-wrapper select {
