--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -226,6 +226,7 @@
             border-radius: 6px;
             padding: 5px;
             box-sizing: border-box;
+            display: block;
         }
 
         #prevBtn,
@@ -726,7 +727,7 @@
         }
 
         .select-wrapper {
-            flex:1;
+            flex: 1;
         }
 
         .select-wrapper select {
