--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -770,6 +770,10 @@
             width: 100%;
         }
 
+        .modal-body .select-wrapper select {
+            width: 100%;
+        }
+
         .modal-body>div select:focus,
         .modal-body>div input[type="number"]:focus {
             outline: none;
