--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -774,6 +774,10 @@
             width: 100%;
         }
 
+        #eqThresholdSelect {
+            font-size: 80%;
+        }
+
         .modal-body>div select:focus,
         .modal-body>div input[type="number"]:focus {
             outline: none;
