--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -146,7 +146,15 @@
                 select.value = 0;
 
                 const x = (getX(point) - 5) * scale;
-                const y = (getBaseY(point) - (point > 12 ? 60 : 30)) * scale; // Closer to board
+                // Position dropdown strictly above/below the point number
+                let y_text;
+                if (point > 12) {
+                    y_text = 20; // Position of number for upper half
+                } else {
+                    y_text = 750; // Position of number for lower half
+                }
+                const offset = point > 12 ? -20 : 20; // Slightly above for upper, below for lower
+                const y = (y_text + offset) * scale;
                 select.style.left = x + 'px';
                 select.style.top = y + 'px';
                 select.style.fontSize = (12 * scale) + 'px';
