--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -152,7 +152,7 @@
         }
 
         function updateDropdownPosition(select, point, scale) {
-            const x = (getX(point) - 5) * scale;
+            const x = (getX(point) - 10) * scale; // Slightly more to the left
             // Position dropdown strictly above/below the point number
             let y_text;
             if (point > 12) {
@@ -160,7 +160,7 @@
             } else {
                 y_text = 750; // Position of number for lower half
             }
-            const offset = point > 12 ? -20 : 20; // Slightly above for upper, below for lower
+            const offset = point > 12 ? -25 : 20; // Higher for upper row, below for lower
             const y = (y_text + offset) * scale;
             select.style.left = x + 'px';
             select.style.top = y + 'px';
