--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -53,6 +53,8 @@
             border: 1px solid #444;
             border-radius: 4px;
             padding: 2px;
+            -webkit-appearance: none;
+            appearance: none;
         }
 
         button {
@@ -160,7 +162,7 @@
             select.style.left = x + 'px';
             select.style.top = y + 'px';
             select.style.width = (50 * scale) + 'px'; // Decrease horizontal size by 2 times
-            select.style.height = (40 * scale) + 'px'; // Increase vertical size by 2 times
+            select.style.height = (60 * scale) + 'px'; // Increase vertical size more
             select.style.fontSize = (18 * scale) + 'px'; // Increase font size
         }
 
