--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -55,6 +55,7 @@
             padding: 2px;
             -webkit-appearance: none;
             appearance: none;
+            text-align: center;
         }
 
         button {
@@ -163,7 +164,7 @@
             select.style.top = y + 'px';
             select.style.width = (50 * scale) + 'px'; // Decrease horizontal size by 2 times
             select.style.height = (60 * scale) + 'px'; // Increase vertical size more
-            select.style.fontSize = (18 * scale) + 'px'; // Increase font size
+            select.style.fontSize = (24 * scale) + 'px'; // Bigger font size
         }
 
         function updateAllDropdownPositions() {
