--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -158,7 +158,7 @@
             } else {
                 y_text = 750; // Position of number for lower half
             }
-            const offset = point > 12 ? -32 : 20; // Higher by 2 for upper row
+            const offset = point > 12 ? -92 : 20; // Higher by height size (60) for upper row
             const y = (y_text + offset) * scale;
             select.style.left = x + 'px';
             select.style.top = y + 'px';
