--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -12,7 +12,7 @@
             color: white;
             background-color: #1a1a1a;
             margin: 0;
-            padding: 80px 20px 20px 0;
+            padding: 80px 0 0 0;
             min-height: 100vh;
         }
 
