--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -76,7 +76,7 @@
 
         @media (max-width: 768px) {
             body {
-                padding: 80px 10px 10px 0;
+                padding: 80px 0 0 0;
             }
         }
     </style>
@@ -150,7 +150,7 @@
         }
 
         function updateDropdownPosition(select, point, scale) {
-            const x = (getX(point) - 15) * scale; // More to the left
+            const x = (getX(point) - (point > 12 ? 15 : 13)) * scale; // More to the left for upper, less for lower
             // Position dropdown strictly above/below the point number
             let y_text;
             if (point > 12) {
