--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -162,8 +162,8 @@
             const y = (y_text + offset) * scale;
             select.style.left = x + 'px';
             select.style.top = y + 'px';
-            select.style.width = (50 * scale) + 'px'; // Decrease horizontal size by 2 times
-            select.style.height = (60 * scale) + 'px'; // Increase vertical size more
+            select.style.width = (55 * scale) + 'px'; // Slightly wider
+            select.style.height = (55 * scale) + 'px'; // Slightly less in height
             select.style.fontSize = (26 * scale) + 'px'; // Bigger font size by 2
         }
 
