--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -72,6 +72,30 @@
             background-color: #0056b3;
         }
 
+        .inputs {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .inputs label {
+            color: white;
+            margin-right: 10px;
+            font-size: 16px;
+        }
+
+        .inputs input {
+            width: 60px;
+            padding: 5px;
+            font-size: 16px;
+            text-align: center;
+            border: 1px solid #444;
+            border-radius: 4px;
+            background-color: #2d2d2d;
+            color: white;
+        }
+
         @media (max-width: 768px) {
             body {
                 padding: 80px 0 0 0;
@@ -83,6 +107,12 @@
 <body>
     <div class="container">
         <h1>Backgammon Board Editor</h1>
+        <div class="inputs">
+            <label for="white-input">белые:</label>
+            <input type="number" id="white-input" min="0" max="15" value="0">
+            <label for="black-input">черные:</label>
+            <input type="number" id="black-input" min="0" max="15" value="0">
+        </div>
         <div class="board-wrapper">
             <canvas id="boardCanvas" width="800" height="800"></canvas>
         </div>
